  -unsafe-string option). The new default-(un)safe-string options
  let you set the default choice for the per-file compile-time
  option. (The new GPR#1252 behavior corresponds to having
  -default-safe-string, while 4.05 and older had
  -default-unsafe-string).

  (Gabriel Scherer, review by Jacques-Pascal Deplaix and Damien Doligez)

### Internal/compiler-libs changes:

- MPR#6826, GPR#828, GPR#834: improve compilation time for open
  (Alain Frisch, review by Frédéric Bour and Jacques Garrigue)

- MPR#7127, GPR#454, GPR#1058: in toplevel, print bytes and strip
  strings longer than the size specified by the "print_length" directive
  (Fabrice Le Fessant, initial PR by Junsong Li)

- GPR#406: remove polymorphic comparison for Types.constructor_tag in compiler
  (Dwight Guth, review by Gabriel Radanne, Damien Doligez, Gabriel Scherer,
   Pierre Chambart, Mark Shinwell)

- GPR#1127: move config/{m,s}.h to byterun/caml and install them.
  User code should not have to include them directly since they are
  included by other header files
  (Sébastien Hinderer)

- GPR#1281: avoid formatter flushes inside exported printers in Location
  (Florian Angeletti, review by Gabriel Scherer)

### Bug fixes

- MPR#248, GPR#1225: unique names for weak type variables
  (Florian Angeletti, review by Frédéric Bour, Jacques Garrigue,
   Gabriel Radanne and Gabriel Scherer)

- MPR#5927: Type equality broken for conjunctive polymorphic variant tags
  (Jacques Garrigue, report by Leo White)

- MPR#6587: only elide Pervasives from printed type paths in unambiguous context
  (Florian Angeletti and Jacques Garrigue)

- MPR#6934: nonrec misbehaves with GADTs
  (Jacques Garrigue, report by Markus Mottl)

- MPR#7070, GPR#1139: Unexported values can cause non-generalisable variables
  error
  (Leo White)

- MPR#7261: Warn on type constraints in GADT declarations
  (Jacques Garrigue, report by Fabrice Le Botlan)

- MPR#7321: Private type in signature clashes with type definition via